--- a/MScIT_TeamProject_TemplateProject/resources/assets/html/1_AI.htm
+++ b/MScIT_TeamProject_TemplateProject/resources/assets/html/1_AI.htm
@@ -61,6 +61,7 @@
     <!-- GRID ITEM 1 -->
     <div class="grid-item">
       <h4>Player Card</h4>
+      <img src="../imgs/enemies_icons/dragonborn.jpg" style="margin:10px; border:5px solid white;">
       <div class="card1">
         <img src="../imgs/card_layout.png" alt="card" style="width: 200%; position: relative;left:60%;">
         <h2 style="text-align:center; position:absolute;top:45%;left:70%;">Paarthurnax</h2>
@@ -82,7 +83,8 @@
     <!-- END OF GRID ITEM 1 -->
     <!-- GRID ITEM 2 -->
     <div class="grid-item">
-      <h4>Ebony Warrior</h4>
+      <h4>Ebony Warrior </h4>
+      <img src="../imgs/enemies_icons/ebony_warrior.jpg" style="margin:10px; border:5px solid white;">
       <div class="card1">
         <img src="../imgs/card_layout.png" alt="card" style="width: 200%; position: relative;left:60%;">
         <h2 style="text-align:center; position:absolute;top:45%;left:70%;">Paarthurnax</h2>
@@ -120,15 +122,15 @@
   <div class="grid-container2">
     <!-- HERE GOES THE STATS -->
     <div class="grid-item">
-      <h4>Cards in deck: 30<h4>
-      <h4>Previews winner: AI 1</h4>
-      <h4>Total draws: 3<h4>
+      <h3>ROUND 3</h3><br />
+      <h4>Player turn<h4>
+      <h4>Number of cards in deck: 10</h4>
+      <h4>Number of cards in common pile: 32<h4>
     </div>
     <!-- HERE ENDS THE STATS -->
     <div class="grid-item">
-      <h1>ROUND 3</h1><br />
-      <input class="w3-button w3-black" type="submit" value="Quit game">
-      <input class="w3-button w3-black" type="submit" value="Next round">
+      <a class="w3-button w3-black" href="/toptrumps/">Quit Game</a>
+      <input class="w3-button w3-black" type="submit" value="Next round"><br>
     </div>
   </div>
 
