--- a/MScIT_TeamProject_TemplateProject/resources/assets/html/4_AI.htm
+++ b/MScIT_TeamProject_TemplateProject/resources/assets/html/4_AI.htm
@@ -61,6 +61,7 @@
     <!-- GRID ITEM 1 -->
     <div class="grid-item">
       <h4>Player Card</h4>
+      <img src="../imgs/enemies_icons/dragonborn.jpg" style="margin:10px; border:5px solid white;">
       <div class="card1">
         <img src="../imgs/card_layout.png" alt="card" style="width: 200%; position: relative;left:60%;">
         <h2 style="text-align:center; position:absolute;top:45%;left:70%;">Paarthurnax</h2>
@@ -83,6 +84,7 @@
     <!-- GRID ITEM 2 -->
     <div class="grid-item">
       <h4>Volkihar Master Vampire</h4>
+      <img src="../imgs/enemies_icons/volkihar_master_vampire.jpg" style="margin:10px; border:5px solid white;">
       <div class="card1">
         <img src="../imgs/card_layout.png" alt="card" style="width: 200%; position: relative;left:60%;">
         <h2 style="text-align:center; position:absolute;top:45%;left:70%;">Paarthurnax</h2>
@@ -105,6 +107,7 @@
     <!-- GRID ITEM 3 -->
     <div class="grid-item">
       <h4>Dremora Valkynaz</h4>
+      <img src="../imgs/enemies_icons/dremora_valkynaz.jpg" style="margin:10px; border:5px solid white;">
       <div class="card1">
         <img src="../imgs/card_layout.png" alt="card" style="width: 200%; position: relative;left:60%;">
         <h2 style="text-align:center; position:absolute;top:45%;left:70%;">Paarthurnax</h2>
@@ -127,6 +130,7 @@
     <!-- GRID ITEM 4 -->
     <div class="grid-item">
       <h4>Dragon Priest</h4>
+      <img src="../imgs/enemies_icons/dragon_priest.jpg" style="margin:10px; border:5px solid white;">
       <div class="card1">
         <img src="../imgs/card_layout.png" alt="card" style="width: 200%; position: relative;left:60%;">
         <h2 style="text-align:center; position:absolute;top:45%;left:70%;">Paarthurnax</h2>
@@ -149,6 +153,7 @@
     <!-- GRID ITEM 5 -->
     <div class="grid-item">
       <h4>Falmer Warmonger</h4>
+      <img src="../imgs/enemies_icons/falmer_warmonger.jpg" style="margin:10px; border:5px solid white;">
       <div class="card1">
         <img src="../imgs/card_layout.png" alt="card" style="width: 200%; position: relative;left:60%;">
         <h2 style="text-align:center; position:absolute;top:45%;left:70%;">Paarthurnax</h2>
@@ -174,15 +179,15 @@
   <div class="grid-container2">
     <!-- HERE GOES THE STATS -->
     <div class="grid-item">
-      <h4>Cards in deck: 30<h4>
-      <h4>Previews winner: AI 1</h4>
-      <h4>Total draws: 3<h4>
+      <h3>ROUND 3</h3><br />
+      <h4>Player turn<h4>
+      <h4>Number of cards in deck: 10</h4>
+      <h4>Number of cards in common pile: 32<h4>
     </div>
     <!-- HERE ENDS THE STATS -->
     <div class="grid-item">
-      <h1>ROUND 3</h1><br />
-      <input class="w3-button w3-black" type="submit" value="Quit game">
-      <input class="w3-button w3-black" type="submit" value="Next round">
+      <a class="w3-button w3-black" href="/toptrumps/">Quit Game</a>
+      <input class="w3-button w3-black" type="submit" value="Next round"><br>
     </div>
   </div>
 
