--- a/MScIT_TeamProject_TemplateProject/resources/assets/html/1_AI.htm
+++ b/MScIT_TeamProject_TemplateProject/resources/assets/html/1_AI.htm
@@ -123,7 +123,7 @@
       <h3 id="round-counter" >ROUND 3</h3><br/>
       <h4 id="whose-turn">Player turn</h4>
       <h4 id="card-counter">Number of cards in deck: 10</h4>
-      <h4 id="common-pile" >Number of cards in common pile: 32</h4>
+      <h4 id="common" >Number of cards in common pile: 32</h4>
     </div>
     <!-- HERE ENDS THE STATS -->
     <div class="grid-item">
